--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,13 @@
 [build]
   publish = "."
   functions = "netlify/functions"
-
 [[headers]]
-  for = "/*"
+  for = "/"
   [headers.values]
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-
 # (Opzionale) forza HTTPS HSTS
 #[[headers]]
-#  for = "/*"
+#  for = "/"
 #  [headers.values]
 #    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
